--- a/01-HTML-CSS/05-grid/classExercise1/Roi/index.html
+++ b/01-HTML-CSS/05-grid/classExercise1/Roi/index.html
@@ -9,8 +9,12 @@
 </head>
 <body>
     <div class="container">
-        <div class="box"></div>
-        <img src="images/florescent inks.jpg">
+        <div class="box">
+            <div class="container_in">
+                <div class="box_in"></div>
+                <div class="box_in"></div>
+                <div class="box_in"></div>
+        </div>
         <div class="box"></div>
         <div class="box"></div>
         <div class="box"></div>
