--- a/01-HTML-CSS/05-grid/classExercise1/Etan/BBC.html
+++ b/01-HTML-CSS/05-grid/classExercise1/Etan/BBC.html
@@ -53,7 +53,7 @@
             <div class="box-img">
                 <img src="https://images.pexels.com/photos/3849373/pexels-photo-3849373.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="Sea">
             </div>
-            <div class="box-info">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Recusandae doloremque numquam sapiente vel!</div>
+            <div class="box-info">Lorem ipsum dolor sit amet.</div>
             <div></div>
             <div class="box-category">Nature</div>
         </div>
