--- a/01-HTML-CSS/05-grid/classExercise1/KheiMichGrid/grid1.html
+++ b/01-HTML-CSS/05-grid/classExercise1/KheiMichGrid/grid1.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,21 +8,34 @@
     <link rel="stylesheet" href="grid1.css">
     <title>Document</title>
 </head>
+
 <body>
     <div class="grid1">
-       <div class="news"><h2>news1</h2>
-           <div class="box2">some thing some thing</div>
-       </div>
-       <div class="news"><h1>news2</h1>
-    <div class="box2">adasdasd</div></div>
-       <div class="news"><h1>news3</h1>
-    <div class="box2"> dasdsa</div></div>
-       <div class="news"><h1>news4</h1>
-    <div class="box2">more yababa</div></div>
-       <div class="news"><h1>news5</h1>
-    <div class="box2"> yadasdas</div></div>
-       <div class="news"><h1>news6</h1>
-    <div class="box2"> sadasdas</div></div>
+        <div class="news">
+            <h1>news1</h1>
+            <div class="box2">some thing some thing</div>
+        </div>
+        <div class="news">
+            <h1>news2</h1>
+            <div class="box2">adasdasd</div>
+        </div>
+        <div class="news">
+            <h1>news3</h1>
+            <div class="box2"> dasdsa</div>
+        </div>
+        <div class="news">
+            <h1>news4</h1>
+            <div class="box2">more yababa</div>
+        </div>
+        <div class="news">
+            <h1>news5</h1>
+            <div class="box2"> yadasdas</div>
+        </div>
+        <div class="news">
+            <h1>news6</h1>
+            <div class="box2"> sadasdas</div>
+        </div>
     </div>
 </body>
+
 </html>
