--- a/01-HTML-CSS/05-grid/classExercise1/KheiMichGrid/grid1.html
+++ b/01-HTML-CSS/05-grid/classExercise1/KheiMichGrid/grid1.html
@@ -17,7 +17,12 @@
         </div>
         <div class="news">
             <h1>news2</h1>
-            <div class="box2">adasdasd</div>
+            <div class="box2">
+                adasdasd\
+                <p>bla 3</p>
+            </div>
+            <p>bla 1</p>
+            <p>bla 2</p>
         </div>
         <div class="news">
             <h1>news3</h1>
