--- a/01-HTML-CSS/05-grid/classExercise1/chaim/index.html
+++ b/01-HTML-CSS/05-grid/classExercise1/chaim/index.html
@@ -9,13 +9,36 @@
 </head>
 <body>
     <div class="container">
-        <div class="box"></div>
-        <img src="" alt="">
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
+        <div class="box">
+        <img src="1.jpg" alt="">
+        <h1>Lorem ipsum dolor</h1>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Itaque quae </p>
+    </div>
+        <div class="box">
+            <img src="2.jpg" alt="">
+            <h1>Lorem ipsum dolor</h1>
+            <p>Lorem ipsum dolor, sit amet consectetur dis officiis  ratione dolores cum tempora itaque doloremque architecto aliquid?</p>
+        </div>
+        <div class="box">
+            <img src="3.jpg" alt="">
+            <h1>Lorem ipsum dolor</h1>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellat reiciendis porro doloremque quae cumque iste minus ex dolore.</p>
+        </div>
+        <div class="box">
+            <img src="4.jpg" alt="">
+            <h1>Lorem ipsum dolor</h1>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellat reici doloremque quae cumque iste minus ex dolore.</p>
+        </div>
+            <div class="box">
+            <img src="5.jpg" alt="">
+            <h1>Lorem ipsum dolor</h1>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. delectus nihil perspiciatis harum libero sit doloribus!</p>
+        </div>
+        <div class="box">
+        <img src="6.jpg" alt="">
+        <h1>Lorem ipsum dolor</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione enim vero.</p>
+    </div>
         <div class="box"></div>
         <div class="box"></div>
         <div class="box"></div>
