--- a/01-HTML-CSS/05-grid/classExercise1/Lior_Krasnopolski/lesson_5.html
+++ b/01-HTML-CSS/05-grid/classExercise1/Lior_Krasnopolski/lesson_5.html
@@ -36,7 +36,7 @@
         <div class="description">
             <p> Germany's health minister has issued his starkest warning yet on the importance of getting vaccinated.</p>
         </div>
-        <img src="" alt="" class="picture">
+        <img src="01-HTML-CSS\05-grid\Lior_Krasnopolski\bbc1.jpg" alt="" class="picture">
     </div>
     </div>
     <div class="box">
