--- a/01-HTML-CSS/05-grid/classExercise1/marina/grid.html
+++ b/01-HTML-CSS/05-grid/classExercise1/marina/grid.html
@@ -15,16 +15,12 @@
 
     <div class="grid-container">
         <div class="box">
-            <div>
-                <img src="https://picsum.photos/200/300">
-            </div>
-            <div>
-                <p>Lorem ipsum dolor sit amet consectetur,
-                    adipisicing elit. Sit incidunt nobis magnam fuga
-                    ex perspiciatis facere explicabo ad maiores iusto.
-                    Maiores sint blanditiis
-                    optio odio est commodi perspiciatis in nam?</p>
-            </div>
+
+            <div style='background-image:url("https://picsum.photos/200/300")'></div>
+
+
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit incidunt nobis magnam fuga ex perspiciatis facere explicabo ad maiores iusto. Maiores sint blanditiis optio odio est commodi perspiciatis in nam?</p>
+
         </div>
 
         <div class="box">
@@ -32,11 +28,7 @@
                 <img src="https://picsum.photos/200/300">
             </div>
             <div>
-                <p>Lorem ipsum dolor sit amet consectetur,
-                    adipisicing elit. Sit incidunt nobis magnam fuga
-                    ex perspiciatis facere explicabo ad maiores iusto.
-                    Maiores sint blanditiis
-                    optio odio est commodi perspiciatis in nam?</p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit incidunt nobis magnam fuga ex perspiciatis facere explicabo ad maiores iusto. Maiores sint blanditiis optio odio est commodi perspiciatis in nam?</p>
             </div>
         </div>
 
@@ -47,11 +39,7 @@
                 <img src="https://picsum.photos/200/300">
             </div>
             <div>
-                <p>Lorem ipsum dolor sit amet consectetur,
-                    adipisicing elit. Sit incidunt nobis magnam fuga
-                    ex perspiciatis facere explicabo ad maiores iusto.
-                    Maiores sint blanditiis
-                    optio odio est commodi perspiciatis in nam?</p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit incidunt nobis magnam fuga ex perspiciatis facere explicabo ad maiores iusto. Maiores sint blanditiis optio odio est commodi perspiciatis in nam?</p>
             </div>
         </div>
 
@@ -61,11 +49,7 @@
                 <img src="https://picsum.photos/200/300">
             </div>
             <div>
-                <p>Lorem ipsum dolor sit amet consectetur,
-                    adipisicing elit. Sit incidunt nobis magnam fuga
-                    ex perspiciatis facere explicabo ad maiores iusto.
-                    Maiores sint blanditiis
-                    optio odio est commodi perspiciatis in nam?</p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit incidunt nobis magnam fuga ex perspiciatis facere explicabo ad maiores iusto. Maiores sint blanditiis optio odio est commodi perspiciatis in nam?</p>
             </div>
         </div>
 
@@ -75,11 +59,7 @@
                 <img src="https://picsum.photos/200/300">
             </div>
             <div>
-                <p>Lorem ipsum dolor sit amet consectetur,
-                    adipisicing elit. Sit incidunt nobis magnam fuga
-                    ex perspiciatis facere explicabo ad maiores iusto.
-                    Maiores sint blanditiis
-                    optio odio est commodi perspiciatis in nam?</p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit incidunt nobis magnam fuga ex perspiciatis facere explicabo ad maiores iusto. Maiores sint blanditiis optio odio est commodi perspiciatis in nam?</p>
             </div>
         </div>
 
@@ -89,11 +69,7 @@
                 <img src="https://picsum.photos/200/300">
             </div>
             <div>
-                <p>Lorem ipsum dolor sit amet consectetur,
-                    adipisicing elit. Sit incidunt nobis magnam fuga
-                    ex perspiciatis facere explicabo ad maiores iusto.
-                    Maiores sint blanditiis
-                    optio odio est commodi perspiciatis in nam?</p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit incidunt nobis magnam fuga ex perspiciatis facere explicabo ad maiores iusto. Maiores sint blanditiis optio odio est commodi perspiciatis in nam?</p>
             </div>
 
         </div>
