--- a/01-HTML-CSS/05-grid/classExercise1/Alex/index.html
+++ b/01-HTML-CSS/05-grid/classExercise1/Alex/index.html
@@ -14,7 +14,7 @@
     <div class="container">
         <div class="box box1"> <img
                 src="https://i.picsum.photos/id/509/200/300.jpg?hmac=Y2Mtq5PEipyaFNlDH01CoNhW9to1T8GCuTf6yUSH-TY">
-            <p></p>
+            <p>hello</p>
         </div>
         <div class="box box2"></div>
         <div class="box box3"></div>
