--- a/01-HTML-CSS/06-BEM model/Room 3/Home.html
+++ b/01-HTML-CSS/06-BEM model/Room 3/Home.html
@@ -9,6 +9,16 @@
     <title>Home</title>
 </head>
 <body>
-    
+   <div class="page">
+       <h1>Welcome to BBC.com</h1>
+       <div class="article-container">
+           <div class="article-box box1">1</div>
+           <div class="article-box box2">2</div>
+           <div class="article-box">3</div>
+           <div class="article-box">4</div>
+           <div class="article-box">5</div>
+           <div class="article-box">6</div>
+       </div>
+   </div> 
 </body>
 </html>
