--- a/01-HTML-CSS/05-grid/Or&Michael/home.html
+++ b/01-HTML-CSS/05-grid/Or&Michael/home.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>BBC</title>
+    <title>BBC-HOME</title>
     <link rel="stylesheet" href="style.css">
 
 </head>
@@ -16,11 +16,12 @@
 
     <div class="menuwrapper">
 
-        <div class="nav">HOME</div>
-        <div class="nav">SPORT</div>
+        <a href="home.html" class="nav">HOME</a>
+        <a href="sport.html" class="nav">SPORT</a>
 
     </div>
 
-    
+
 </body>
+
 </html>
