--- a/01-HTML-CSS/05-grid/Andrew&Ohad&John/home.html
+++ b/01-HTML-CSS/05-grid/Andrew&Ohad&John/home.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="topGrid">
-        <div id="bigArcticle">
+        <div class="bigArcticle home">
             <h2>
                 Lorem ipsum dolor sit amet.
             </h2>
@@ -22,7 +22,7 @@
                 Travel
             </p>
         </div>
-        
+
         <div class="midArcticle">
             <h2>
                 Lorem ipsum dolor sit amet.
