--- a/01-HTML-CSS/05-grid/classExercise1/OmriAharonov/grid.html
+++ b/01-HTML-CSS/05-grid/classExercise1/OmriAharonov/grid.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,19 +8,26 @@
     <link rel="stylesheet" href="style.css">
     <title>Grid</title>
 </head>
+
 <body>
     <div class="container">
         <div class="box">
-            <img src="president.jpg">
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Qui voluptatibus accusamus perferendis? 
-                Explicabo harum voluptas magnam illo enim, eius laudantium id temporibus aspernatur itaque 
-                facere cumque minima obcaecati eligendi quam!</p>
+            <img src="https://picsum.photos/200/300">
+            <h1>Lorem ipsum</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur
+                provident, eum, et sequi deserunt minus fugit nisi placeat labore,
+                quam quo explicabo magnam enim tempore neque.
+                Eligendi facilis corrupti ipsam.
+            </p>
+
         </div>
-        <div class="box"></div>
+        <div class="box">
+        </div>
         <div class="box"></div>
         <div class="box"></div>
         <div class="box"></div>
         <div class="box"></div>
     </div>
 </body>
+
 </html>
