--- a/01-HTML-CSS/05-grid/classExercise1/OmriAharonov/grid.html
+++ b/01-HTML-CSS/05-grid/classExercise1/OmriAharonov/grid.html
@@ -12,13 +12,15 @@
 <body>
     <div class="container">
         <div class="box">
-            <img src="https://picsum.photos/200/300">
-            <h1>Lorem ipsum</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur
-                provident, eum, et sequi deserunt minus fugit nisi placeat labore,
-                quam quo explicabo magnam enim tempore neque.
-                Eligendi facilis corrupti ipsam.
-            </p>
+            <div class="Line">
+                <img src="https://picsum.photos/200/300">
+                <h1>Lorem ipsum</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur
+                    provident, eum, et sequi deserunt minus fugit nisi placeat labore,
+                    quam quo explicabo magnam enim tempore neque.
+                    Eligendi facilis corrupti ipsam.
+                </p>
+            </div>
 
         </div>
         <div class="box">
