--- a/01-HTML-CSS/05-grid/classExercise1/OmriAharonov/grid.html
+++ b/01-HTML-CSS/05-grid/classExercise1/OmriAharonov/grid.html
@@ -13,15 +13,18 @@
     <div class="container">
         <div class="box">
             <div class="Line">
-                <img src="https://picsum.photos/200/300">
-                <h1>Lorem ipsum</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur
-                    provident, eum, et sequi deserunt minus fugit nisi placeat labore,
-                    quam quo explicabo magnam enim tempore neque.
-                    Eligendi facilis corrupti ipsam.
-                </p>
+                <img src="https://picsum.photos/250/300">
             </div>
-
+            <div class="Line">
+              <h1>Lorem picsum</h1>
+            </div>
+            <div class="Line">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                Reprehenderit culpa sequi distinctio, nemo, minima iure
+                 repellat quidem saepe, temporibus vero placeat tempora. 
+                 Eius eos 
+                molestiae modi consequuntur quibusdam voluptas facilis?
+            </div>
         </div>
         <div class="box">
         </div>
