--- a/01-HTML-CSS/05-grid/אליה,עדו,ארתור/artur.html
+++ b/01-HTML-CSS/05-grid/אליה,עדו,ארתור/artur.html
@@ -7,12 +7,16 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="topnav">
-        <a class="active" href="#home">Home</a>
-        <a href="#news">News</a>
-        <a href="#contact">Contact</a>
-        <a href="#about">About</a>
+    <div class="wrapper-body">
+      <div class="topnav">
+          <a class="active" href="#home">Home</a>
+           <a href="#news">News</a>
+           <a href="#contact">Contact</a>
+           <a href="#about">About</a>
       </div>
-    
+      <div class="row-container"></div>
+      <div class="row-container"></div>
+      <div class="row-container"></div>
+    </div>
 </body>
 </html>
