--- a/01-HTML-CSS/05-grid/classExercise1/Alex/index.html
+++ b/01-HTML-CSS/05-grid/classExercise1/Alex/index.html
@@ -12,8 +12,9 @@
 
 <body>
     <div class="container">
-        <div class="box box1"> <img
-                src="https://i.picsum.photos/id/509/200/300.jpg?hmac=Y2Mtq5PEipyaFNlDH01CoNhW9to1T8GCuTf6yUSH-TY">
+        <div class="box box1">
+            <!-- <img
+                src="https://i.picsum.photos/id/509/200/300.jpg?hmac=Y2Mtq5PEipyaFNlDH01CoNhW9to1T8GCuTf6yUSH-TY"> -->
             <p>hello</p>
         </div>
         <div class="box box2"></div>
@@ -21,12 +22,8 @@
         <div class="box box4"></div>
         <div class="box box5"></div>
         <div class="box box6"></div>
-        <div class="box box7"></div>
-        <div class="box box8"></div>
-        <div class="box box9"></div>
-        <div class="box box10"></div>
-        <div class="box box11"></div>
-        <div class="box box12"></div>
+
+
 
     </div>
 </body>
