--- a/01-HTML-CSS/05-grid/MarinaYossiShani/bbc-news/news.html
+++ b/01-HTML-CSS/05-grid/MarinaYossiShani/bbc-news/news.html
@@ -57,79 +57,85 @@
         <div class="wrapper">
 
             <div class="grid-1">
-                <h1>Lorem ipsum dolor sit amet consectetur.</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi possimus eius rem. Accusamus aut
-                    sitatibus ex animi atque explicabo error inventore ea!
-                    Nam, illum et quidem tenetur minima accusamus libero in corporis, eaque aperiam alias earum cum,
-                    laudantium dicta reiciendis eius accusantium pariatur! Consectetur, doloribus! Velit repellat sunt
-                </p>
+                <h1>Bulgaria bus crash: Children among at least 46 killed</h1>
+                <p>At least 46 people, including 12 children, died when a bus crashed and caught fire in western Bulgaria, officials say.
+                    The bus was registered in North Macedonia and most of those on board were tourists returning from a trip to Istanbul in Turkey.                    
+                    It rammed a crash barrier on a motorway south-west of the capital Sofia at about 02:00 local time (00:00 GMT).
+                    Seven people escaped from the bus and were taken to hospital with burns.
+                    
+                   </p>
             </div>
 
             <div class="grid-2">
-                <img src="https://picsum.photos/id/1/800/600">
+                <img src="2021-11-23 19.25.04.png">
             </div>
 
             <div class="grid-3">
-                <img src="https://picsum.photos/id/1/300/200">
-                <h1>Lorem ipsum dolor sit amet consectetur.</h1>
-                <p>Lorem Laborum fugiat, quas temporibus odio, quod alias magnam quis assumenda
-                    explicabo, incidunt corrupti tempora delectus? Ipsam accusamus consequatur numquam quasi odit sit
-                    cum.</p>
+                <img src="Screenshot 2021-11-23 19.21.53.png">
+                <h1>Afghanistan: 100 days of Taliban rule</h1>
+                <p>It's been 100 days since the Taliban returned to power in Afghanistan.
+                    BBC reporter Yalda Hakim visited a district of Kabul to report on four key areas of concern facing
+                    the country.</p>
             </div>
 
             <div class="grid-4">
-                <img src="https://picsum.photos/id/1/300/200">
-                <h1>Lorem ipsum dolor sit amet consectetur.</h1>
+                <img src="_120727353__112965584_gettyimages-976188246-1.jpg">
+                <h1>US to release oil reserves in attempt to lower prices</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque maxime consequatur voluptatem
                     doloribus, nobis quo odio ibus fugiat, libero esse a distinctio! Doloremque, ex.</p>
             </div>
 
             <div class="grid-5">
-                <img src="https://picsum.photos/id/1/300/200">
-                <h1>Lorem ipsum dolor sit amet consectetur.</h1>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Asperiores voluptatem ratione vitae quas
-                    sit, corrupti ipsum. Veritatis exercitationem fuga repellat et facilis voluptatibus velit obcaecati
-                    fugit unde similique. Quia doloribus voluptatibus eveniet ex, nobis delectus rem laboriosam ipsa.
-                </p>
+                <img src="_121764911_hi072140295-1.jpg">
+                <h1>Peng Shuai: China says tennis star case maliciously hyped up</h1>
+                <p>China has said the controversy surrounding tennis star Peng Shuai has been "maliciously hyped up", in
+                    its most direct response to the issue yet.
+                    Ms Peng disappeared from the public eye for almost three weeks after making sexual assault
+                    allegations against China's former vice premier, triggering widespread international concern.</p>
             </div>
 
             <div class="grid-6">
-                <img src="https://picsum.photos/id/1/300/200">
-                <h1>Lorem ipsum dolor sit amet consectetur.</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, deserunt natus. Dolores
-                    similique quisquam incidunt, minus eaque, beatae numquam sint inventore, perferendis quibusdam ipsa
-                    corporis! Maiores, libero.</p>
+                <img src="_121613371_womanshopping.jpg">
+                <h1>Can UK avoid a Europe-style return to lockdown?</h1>
+                <p>Covid infection rates have started rising sharply in parts of Western Europe, prompting the
+                    introduction of fresh restrictions and lockdowns.
+                    It has triggered fears the UK could follow suit. But there are plenty of reasons to believe Britain
+                    will escape the worst of what is being seen on the continent. In fact, the UK may well be in the
+                    strongest position of all to weather Covid this winter.</p>
+
+
             </div>
 
             <div class="grid-7">
-                <img src="https://picsum.photos/id/1/300/200">
-                <h1>Lorem ipsum dolor sit amet consectetur.</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim velit facilis similique officia
-                    cupiditate, aspernatur ipsum quas repellat incidunt suscipit!</p>
+                <img src="_115810648_004705345.jpg">
+                <h1>Meredith Kercher: Student's killer Rudy Guede ends sentence</h1>
+                <p>Rudy Guede, convicted of the 2007 murder of UK exchange student Meredith Kercher, has finished his
+                    sentence early saying he wants to be forgotten.
+                    Guede, 34, was the only person jailed over the notorious sexual assault and murder in Perugia, in
+                    central Italy.
+                </p>
             </div>
 
             <div class="grid-8">
-                <h1>Lorem ipsum dolor sit amet consectetur.</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel ipsum nam unde nulla fuga. Nam minus
-                    repellendus suscipit dolor qui.</p>
-                <h1>Lorem ipsum dolor sit amet consectetur.</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita magni, eligendi autem deserunt
-                    dolores
-                    officia labore! Iste reiciendis aliquam ullam possimus eos ab repellat, omnis porro consequuntur
-                    quisquam velit ea.</p>
+                <h1>LiveLIVEMinisters strengthen NI's work-from-home advice</h1>
+                <p>World</p>
+                <h1>LiveLIVEMinisters strengthen NI's work-from-home advice</h1>
+                <p>Africa</p>
+                <h1>Wisconsin: Parade incident driver to be charged with homicide</h1>
+                <p>Canada</p>
 
 
             </div>
 
             <div class="grid-9">
-                <h1>Lorem ipsum dolor sit amet consectetur.</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita magni, eligendi autem deserunt
-                    dolores
-                    officia labore! Iste reiciendis aliquam ullam possimus eos ab repellat, omnis porro consequuntur
-                    quisquam velit ea.</p>
-                <h1>Lorem ipsum dolor sit amet consectetur.</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel ipsum nam unde nulla fuga. Nam minus
-                    repellendus suscipit dolor qui.</p>
+                <h1>Mexican nursery's lottery win turns into nightmare</h1>
+                <p>Latin America</p>
+                <h1>Kyle Rittenhouse says his case 'has nothing to do with race'</h1>
+                <p>US & canada</p>
+                <h1>Uber takes its first step into the cannabis market</h1>
+                <p>Business</p>
+                <h1>Australia declares La Niña phenomenon has begun</h1>
+                <p>Australia</p>
 
 
             </div>
