--- a/01-HTML-CSS/05-grid/bbc-zoom/news.html
+++ b/01-HTML-CSS/05-grid/bbc-zoom/news.html
@@ -12,12 +12,16 @@
 
 <body>
     <div class="topContainer">
-        <div class="box"></div>
-        <div class="box"></div>
+        <div class="box picture"></div>
+        <div class="box text"></div>
         <div class="box"></div>
     </div>
     <div class="container">
-        <div class="box"></div>
+        <div class="box"> <img
+                src="https://i.picsum.photos/id/442/200/300.jpg?hmac=0CJZGZR5EIN-e7Q7zmUijm-B6pp4X4C57kuL4kR02ik">
+            <h2>sport</h2>
+            <p>today</p>
+        </div>
         <div class="box"></div>
         <div class="box"></div>
         <div class="box"></div>
