--- a/01-HTML-CSS/05-grid/bbc-zoom/Home.html
+++ b/01-HTML-CSS/05-grid/bbc-zoom/Home.html
@@ -20,9 +20,14 @@
     <li><a href="travel.html">travel</a></li>
   </ul></nav>
 
+  <div class="topContainer">
+    <div class="box picture"></div>
+    <div class="box text"></div>
+    <div class="box"></div>
+</div>
 
   
-  <div class="Container">
+  <div class="container">
     <div class="box box1"></div>
     <div class="box box2"></div>
     <div class="box box3"></div>
