--- a/01-HTML-CSS/05-grid/bbc-zoom/Home.html
+++ b/01-HTML-CSS/05-grid/bbc-zoom/Home.html
@@ -21,13 +21,19 @@
   </ul></nav>
 
   <div class="topContainer">
-    <div class="box picture"></div>
-    <div class="box text"></div>
-    <div class="box"></div>
+    <div class="box item1"></div>
+    <div class="box item2"></div>
+    <div class="box item3"></div>
+    <div class="box item4"></div>
+    <div class="box item5"></div>
+    <div class="box item6"></div>
+    <div class="box item7"></div>
+    <div class="box item8"></div>
+   
 </div>
 
   
-  <div class="container">
+  <div class="Container">
     <div class="box box1"></div>
     <div class="box box2"></div>
     <div class="box box3"></div>
