--- a/01-HTML-CSS/05-grid/bbc-zoom/Home.html
+++ b/01-HTML-CSS/05-grid/bbc-zoom/Home.html
@@ -7,18 +7,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="style.css">
-  
+
 </head>
 
 
 <body>
   <nav>
-       <ul>
-    <li><a href="Home.html">Home</a></li>
-    <li><a href="news.html">News</a></li>
-    <li><a href="sport.html">Sport</a></li>
-    <li><a href="travel.html">travel</a></li>
-  </ul></nav>
+    <ul>
+      <li><a href="Home.html">Home</a></li>
+      <li><a href="news.html">News</a></li>
+      <li><a href="sport.html">Sport</a></li>
+      <li><a href="travel.html">travel</a></li>
+    </ul>
+  </nav>
 
   <div class="topContainer">
     <div class="box item1"></div>
@@ -29,10 +30,10 @@
     <div class="box item6"></div>
     <div class="box item7"></div>
     <div class="box item8"></div>
-   
-</div>
 
-  
+  </div>
+
+
   <div class="Container">
     <div class="box box1"></div>
     <div class="box box2"></div>
