--- a/01-HTML-CSS/05-grid/Andrew&Ohad&John/home.html
+++ b/01-HTML-CSS/05-grid/Andrew&Ohad&John/home.html
@@ -5,12 +5,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>home</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
-    <div class="topGrid">
+    <div class="Header">
+        <img src="pics/BBC-Logo.png" alt="bbc logo" title="bbc logo" class="logo" onclick="window.location.href='home.html'">
+        <a href="home.html">home</a>
+        <a href="news.html">news</a>
+        <a href="sport.html">sport</a>
+        <a href="#">reel</a>
+        <a href="#">worklife</a>
+        <a href="#">travel</a>
+        <a href="#">future</a>
+        <a href="#">culture</a>
+        <a href="#">more</a>
+     </div>
+     <button style="position: relative; bottom: 58px; left: 0.5%;"class="signIn" title="sign in"><i class="fa fa-user-circle"></i></button>
+     <button style="position: relative; bottom: 58px; left:94%;"class="searchButton" title="חיפוש"><i class="fa fa-search"></i></button>
+  
+     <div class="topGrid">
         <div class="bigArcticle home">
             <h2>
                 Lorem ipsum dolor sit amet.
