--- a/01-HTML-CSS/05-grid/bbc-zoom/Home.html
+++ b/01-HTML-CSS/05-grid/bbc-zoom/Home.html
@@ -22,14 +22,11 @@
   </nav>
 
   <div class="topContainer">
-    <div class="box item1"></div>
+    <div class="box item1"><img src="https://www.industrialempathy.com/img/remote/ZiClJf-1920w.jpg" alt=""></div>
     <div class="box item2"></div>
     <div class="box item3"></div>
     <div class="box item4"></div>
     <div class="box item5"></div>
-    <div class="box item6"></div>
-    <div class="box item7"></div>
-    <div class="box item8"></div>
 
   </div>
 
