--- a/01-HTML-CSS/05-grid/MarinaYossiShani/bbc-home/Home.html
+++ b/01-HTML-CSS/05-grid/MarinaYossiShani/bbc-home/Home.html
@@ -76,10 +76,12 @@
   <div class="News thirdcontent">
     <h2>News</h2>
     <div class="News first">
-
+     <img src="news1.jpg">
     </div>
     <div class="News second"></div>
+    <img src="news2.jpg">
     <div class="News third"></div>
+    <img src="news3.jpg">
 
 
 
