--- a/01-HTML-CSS/05-grid/Or&Michael/sport.html
+++ b/01-HTML-CSS/05-grid/Or&Michael/sport.html
@@ -23,7 +23,7 @@
 
     </div>
     <div class="sport-menu">
-        <h1>SPORT</h1>
+        <h1 class="sport-menu2">SPORT</h1>
     </div>
     <div class="wrappersport">
         <div class="boxsport up-sport1">
