--- a/01-HTML-CSS/05-grid/MarinaYossiShani/bbc-home/Home.html
+++ b/01-HTML-CSS/05-grid/MarinaYossiShani/bbc-home/Home.html
@@ -72,16 +72,29 @@
     <div></div>
 
   </div>
-
+  <div class="newsstrip">
+    
+    <div> </div>
+    <div><h2>News</h2></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+  </div>
   <div class="News thirdcontent">
-    <h2>News</h2>
-    <div class="News first">
-     <img src="news1.jpg">
-    </div>
-    <div class="News second"></div>
-    <img src="news2.jpg">
-    <div class="News third"></div>
-    <img src="news3.jpg">
+
+  
+     <div>1</div>
+      <div class="News first">
+        <img src="news1.jpg">
+      </div>
+      <div class="News second">
+      <img src="news2.jpg">
+      </div>
+      <div class="News third">
+      <img src="news3.jpg">
+      </div>
+      <div>2</div>
 
 
 
