--- a/01-HTML-CSS/05-grid/Or&Michael/sport.html
+++ b/01-HTML-CSS/05-grid/Or&Michael/sport.html
@@ -53,7 +53,7 @@
         <div class="boxsport down-sport3">
             <img class="imgsport down-sport3" src="https://ichef.bbci.co.uk/onesport/cps/976/cpsprodpb/2CCB/production/_121776411_whatsubject.jpg" alt="">
             <p>The New York Knicks beat the LA Lakers</p>
-            <p class="category-sport">basketball</p>
+            <p class="category-sport">Basketball</p>
         </div>
         <div class="boxsport down-sport4">
             <img class="imgsport down-4" src="https://ichef.bbci.co.uk/live-experience/cps/624/cpsprodpb/vivo/live/images/2021/11/24/f78949a8-8566-4c85-acdb-76aa430f0c87.jpg" alt="">
