--- a/01-HTML-CSS/05-grid/אליה,עדו,ארתור/Task5.html
+++ b/01-HTML-CSS/05-grid/אליה,עדו,ארתור/Task5.html
@@ -49,6 +49,7 @@ li{
   padding: 20px;
   box-shadow: 0 20px 30px rgba(15, 10, 10, 0.966);
 align-items: center;
+border-right: solid 1px whitesmoke;
 }
 li a{
   display: flex;
@@ -57,6 +58,7 @@ li a{
   padding: 2px;
   font-weight: 500;
   text-decoration: none;
+
 }
 
 .li:hover {
