--- a/01-HTML-CSS/05-grid/אליה,עדו,ארתור/artur.html
+++ b/01-HTML-CSS/05-grid/אליה,עדו,ארתור/artur.html
@@ -8,12 +8,15 @@
 </head>
 <body>
     <div class="wrapper-body">
-      <div class="topnav">
-          <a class="active" href="#home">Home</a>
-           <a href="#news">News</a>
-           <a href="#contact">Contact</a>
-           <a href="#about">About</a>
-      </div>
+        <div class="topnav">
+            <ul>
+              <li><a href=""><i class="fas fa-home" style="padding: 5px;"></i>Home</a></li>
+              <li><a href="">news</a></li>
+              <li><a href="">sport</a></li>
+              <li><a href="">lifeStyle</a></li>
+            </ul>
+              
+          </div>
       <div class="row-container"></div>
       <div class="row-container"></div>
       <div class="row-container"></div>
