--- a/01-HTML-CSS/05-grid/אליה,עדו,ארתור/Task5.html
+++ b/01-HTML-CSS/05-grid/אליה,עדו,ארתור/Task5.html
@@ -224,6 +224,16 @@ li a{
     font-size: 20px;
     text-transform: uppercase;
     }
+    .logoa{
+      height: 5vh;
+      width: 15vh;
+      background-image: url(photos/logo.png);
+      background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    box-shadow: none;
+
+    }
     
 
     
@@ -237,7 +247,7 @@ li a{
 <body>
     <div class="topnav">
       <ul>
-        <li><a href=""><i class="fas fa-home" style="padding: 5px;"></i></a></li>
+        <li><a class="logoa" href=""></a></li>
         <li><a href="Sign_In.html">Sign In</a></li>
         <li><a href="">Home</a></li>
         <li><a href="">sport</a></li>
