with Header and news

--- a/01-HTML-CSS/05-grid/Andrew&Ohad&John/news.html
+++ b/01-HTML-CSS/05-grid/Andrew&Ohad&John/news.html
@@ -21,7 +21,109 @@
         <a href="#">culture</a>
         <a href="#">more</a>
      </div>
-     <button style="position: relative; bottom: 58px; left: 0.5%;"class="signIn" title="sign in"><i class="fa fa-user-circle"></i></button>
-     <button style="position: relative; bottom: 58px; left:94%;"class="searchButton" title="חיפוש"><i class="fa fa-search"></i></button>
+     <button style="position: absolute; bottom: 707px; left: 0.5%;"class="signIn" title="sign in"><i class="fa fa-user-circle"></i></button>
+     <button style="position: absolute; bottom: 693px; left:94%;"class="searchButton" title="חיפוש"><i class="fa fa-search"></i></button>
+     
+     <div style="background-color: red; font-family: Arial, Helvetica, sans-serif; color: white; padding: 10px;"> 
+         <h1>NEWS</h1>
+     <div class="news_Header">
+        <a href="#">| Home</a>
+        <a href="#">| Coronavirus</a>
+        <a href="#">| Climate</a>
+        <a href="#">| Video</a>
+        <a href="#">| World</a>
+        <a href="#">| Uk</a>
+        <a href="#">| Business</a>
+        <a href="#">| Tech</a>
+        <a href="#">| Science</a>
+        <a href="#">| Stories</a>
+        <a href="#">| Entertainment & Arts</a>
+        <a href="#">| Health</a>
+        <a href="#">| World News TV</a>
+        <a href="#">| In Pictures</a>
+        <a href="#">| More</a>
+     </div>
+    </div>
+
+    <div class="topGrid">
+    <div class="bigArcticle news">
+        <h2>
+            Lorem ipsum dolor sit amet.
+        </h2>
+        <h3>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore at consequuntur ad ratione similique voluptatem? Eaque!
+        </h3>
+        <p>
+            Travel
+        </p>
+    </div>
+    <div class="arcticle news">
+        <img  class="smallPic" src="pics/Boris_Johnson.jpg">
+        <h2>
+            Boris Johnson is on great form, says deputy PM
+        </h2>
+        <h3>
+            Dominic Raab defends the PM as a "Tiggerish" character after criticism of a speech he gave to business leaders.
+        </h3>
+        <p>
+            UK Politics
+        </p>
+    </div>
+    </div>
+
+    <br><br><br><br><br><br><br>
+
+    <div class="grid4">
+        <div class="arcticle news">
+            <img  class="smallPic" src="pics/asteroid.jpg">
+            <h2>
+                Mission to punch an asteroid launches.
+            </h2>
+            <h3>
+                A spacecraft has started its journey as it aims to deliberately nudge an asteroid off course.
+            </h3>
+            <p>
+                Science & Environment
+            </p>
+        </div>
+        <div class="arcticle news">
+            <img  class="smallPic" src="pics/Benzema.jpg">
+            <h2>
+                French footballer Benzema guilty in sex tape trial.
+            </h2>
+            <h3>
+                The Real Madrid striker is convicted of conspiring to blackmail fellow footballer Mathieu Valbuena.
+            </h3>
+            <p>
+                Europe
+            </p>
+        </div>
+        <div class="arcticle news">
+            <img  class="smallPic" src="pics/Austria.jpg">
+            <h2>
+                Austria to go into full lockdown as Covid surges.
+            </h2>
+            <h3>
+                As well as Monday's lockdown, the chancellor says vaccinations will be compulsory from February.
+            </h3>
+            <p>
+                Europe
+            </p>
+        </div>
+        <div class="arcticle news">
+            <img class="smallPic" src="pics/apple.png">
+            <h2>
+                Apple sues Israeli spyware firm NSO Group.
+            </h2>
+            <h3>
+                Apple is the latest in a string of firms and governments to go after the hacking tool firm.
+            </h3>
+            <p>
+                Business
+            </p>
+        </div>
+    </div>
+
+
 </body>
 </html>
