--- a/01-HTML-CSS/05-grid/classExercise1/sport/index.html
+++ b/01-HTML-CSS/05-grid/classExercise1/sport/index.html
@@ -10,6 +10,18 @@
 </head>
 
 <body>
+    <header>
+        <div class="nav-bar">
+            <img class="logo" src="img/BBC.svg" alt="logo">
+            <nav>
+                <ul class="nav_links">
+                    <li><a href="#">home</a></li>
+                    <li><a href="#">news</a></li>
+                    <li><a href="#">sport</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
     <div class="wrapper">
         <div class="box">
             <img src="grid/OIF.jpg" alt="">
