--- a/01-HTML-CSS/05-grid/אליה,עדו,ארתור/Task5.html
+++ b/01-HTML-CSS/05-grid/אליה,עדו,ארתור/Task5.html
@@ -39,11 +39,12 @@
         }
 
 ul {
+  position: relative; right: 18vh;
   width: 100%;
   padding: 5px;
   height: 30px;
   display:flex;
-  justify-content: start;
+  justify-content: center;
   margin: auto;
   box-shadow: 0 20px 30px rgb(0, 0, 0);
 border: solid;  
@@ -273,7 +274,7 @@ li a{
         <li><a href="Sign_In.html">Sign In</a></li>
         <li><a href="">Home</a></li>
         <li><a href="">sport</a></li>
-        <li><a href="">lifeStyle</a></li>
+        <li><a href="artur.html">lifeStyle</a></li>
       </ul>
         
     </div>
