picture_insert_into_the_code

--- a/01-HTML-CSS/05-grid/Or&Michael&Lior/News.html
+++ b/01-HTML-CSS/05-grid/Or&Michael&Lior/News.html
@@ -11,9 +11,8 @@
     <div class="container">
         <div class="box box1">
             <h1>Germany's Scholz seals deal to end Merkel era</h1>
-            <div class=image1>
-            <img src="" alt="">
-            </div>
+
+        <img class=image1 src="01-HTML-CSS\05-grid\Or&Michael&Lior\Pictures_News\BBC_NEWS_1.jpg" alt="">
         </div>
         <div class="box box2"></div>
         <div class="box box3"></div>
