--- a/01-HTML-CSS/05-grid/Andrew&Ohad&John/news.html
+++ b/01-HTML-CSS/05-grid/Andrew&Ohad&John/news.html
@@ -21,8 +21,8 @@
         <a href="#">culture</a>
         <a href="#">more</a>
      </div>
-     <button style="position: absolute; bottom: 707px; left: 0.5%;"class="signIn" title="sign in"><i class="fa fa-user-circle"></i></button>
-     <button style="position: absolute; bottom: 693px; left:94%;"class="searchButton" title="חיפוש"><i class="fa fa-search"></i></button>
+     <button style="position: relative; bottom: 58px; left: 0.5%;"class="signIn" title="sign in"><i class="fa fa-user-circle"></i></button>
+     <button style="position: relative; bottom: 58px; left:94%;"class="searchButton" title="חיפוש"><i class="fa fa-search"></i></button>
      
      <div style="background-color: red; font-family: Arial, Helvetica, sans-serif; color: white; padding: 10px;"> 
          <h1>NEWS</h1>
@@ -71,7 +71,7 @@
     </div>
     </div>
 
-    <br><br><br><br><br><br><br>
+    
 
     <div class="grid4">
         <div class="arcticle news">
