--- a/01-HTML-CSS/05-grid/Andrew&Ohad&John/news.html
+++ b/01-HTML-CSS/05-grid/Andrew&Ohad&John/news.html
@@ -48,7 +48,7 @@
     <div class="topGrid">
     <div class="bigArcticle news">
         <h2>
-            Lorem ipsum dolor sit amet.
+            Loremvxcvxcv ipsum dolor sit amet.
         </h2>
         <h3>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore at consequuntur ad ratione similique voluptatem? Eaque!
@@ -70,8 +70,6 @@
         </p>
     </div>
     </div>
-
-    <br><br><br><br><br><br><br><br><br><br><br><br>
 
     <div class="grid4">
         <div class="arcticle news">
