--- a/01-HTML-CSS/05-grid/Andrew&Ohad&John/home.html
+++ b/01-HTML-CSS/05-grid/Andrew&Ohad&John/home.html
@@ -26,7 +26,7 @@
      <button style="position: relative; bottom: 58px; left: 0.5%;"class="signIn" title="sign in"><i class="fa fa-user-circle"></i></button>
      <button style="position: relative; bottom: 58px; left:94%;"class="searchButton" title="חיפוש"><i class="fa fa-search"></i></button>
   
-     <div class="topGrid">
+     <div class="topGrid home">
         <div class="bigArcticle home">
             <h2>
                 Lorem ipsum dolor sit amet.
