--- a/01-HTML-CSS/05-grid/Andrew&Ohad&John/home.html
+++ b/01-HTML-CSS/05-grid/Andrew&Ohad&John/home.html
@@ -39,7 +39,7 @@
             </p>
         </div>
 
-        <div class="midArcticle pic1">
+        <div class="midArcticle home pic1">
             <h2>
                 Lorem ipsum dolor sit amet.
             </h2>
@@ -50,7 +50,7 @@
                 Travel
             </p>
         </div>
-        <div class="midArcticle pic2">
+        <div class="midArcticle home pic2">
             <h2>
                 Lorem ipsum dolor sit amet.
             </h2>
@@ -61,7 +61,7 @@
                 Travel
             </p>
         </div>
-        <div class="midArcticle pic3">
+        <div class="midArcticle home pic3">
             <h2>
                 Lorem ipsum dolor sit amet.
             </h2>
@@ -72,7 +72,7 @@
                 Travel
             </p>
         </div>
-        <div class="midArcticle pic4">
+        <div class="midArcticle home pic4">
             <h2>
                 Lorem ipsum dolor sit amet.
             </h2>
