--- a/01-HTML-CSS/05-grid/Andrew&Ohad&John/news.html
+++ b/01-HTML-CSS/05-grid/Andrew&Ohad&John/news.html
@@ -46,18 +46,20 @@
     </div>
 
     <div class="topGrid">
+        <div class="midArcticle news">
+            <h2>
+                Loremvxcvxcv ipsum dolor sit amet.
+            </h2>
+            <h3>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore at consequuntur ad ratione similique voluptatem? Eaque!
+            </h3>
+            <p>
+                Travel
+            </p>
+        </div>
     <div class="bigArcticle news">
-        <h2>
-            Loremvxcvxcv ipsum dolor sit amet.
-        </h2>
-        <h3>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore at consequuntur ad ratione similique voluptatem? Eaque!
-        </h3>
-        <p>
-            Travel
-        </p>
     </div>
-    <div class="arcticle news">
+    <div class="midArcticle news">
         <img  class="smallPic" src="pics/Boris_Johnson.jpg">
         <h2>
             Boris Johnson is on great form, says deputy PM
