--- a/01-HTML-CSS/05-grid/מיכאל נועה ג'ניה/noa.html
+++ b/01-HTML-CSS/05-grid/מיכאל נועה ג'ניה/noa.html
@@ -40,7 +40,7 @@
                 Marvel to release comic showcasing Indigenous heroes
             </P>
         </div>
-        <div class="box angels">
+        <div class="box">
             <img src="https://abcnews.go.com/images/US/cityofangles_1637698461777_hpMain.jpg" alt="los angels">
             <P>
                 'City of Angels, City of Death': Inside the hunt for Los Angeles' string of serial killers
