--- a/01-HTML-CSS/05-grid/Andrew&Ohad&John/news.html
+++ b/01-HTML-CSS/05-grid/Andrew&Ohad&John/news.html
@@ -48,13 +48,13 @@
     <div class="topGrid">
         <div class="midArcticle news">
             <h2>
-                Loremvxcvxcv ipsum dolor sit amet.
+                Indian government set to ban cryptocurrencies.
             </h2>
             <h3>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore at consequuntur ad ratione similique voluptatem? Eaque!
+                India is set to go ahead with its plan to ban most cryptocurrencies in the country under a long-awaited bill.
             </h3>
             <p>
-                Travel
+                Tech
             </p>
         </div>
     <div class="bigArcticle news">
@@ -76,6 +76,7 @@
     <div class="grid4">
         <div class="arcticle news">
             <img  class="smallPic" src="pics/asteroid.jpg">
+            <span>
             <h2>
                 Mission to punch an asteroid launches.
             </h2>
@@ -85,9 +86,11 @@
             <p>
                 Science & Environment
             </p>
+        </span>
         </div>
         <div class="arcticle news">
             <img  class="smallPic" src="pics/Benzema.jpg">
+            <span>
             <h2>
                 French footballer Benzema guilty in sex tape trial.
             </h2>
@@ -97,9 +100,11 @@
             <p>
                 Europe
             </p>
+        </span>
         </div>
         <div class="arcticle news">
             <img  class="smallPic" src="pics/Austria.jpg">
+            <span>
             <h2>
                 Austria to go into full lockdown as Covid surges.
             </h2>
@@ -109,9 +114,11 @@
             <p>
                 Europe
             </p>
+        </span>
         </div>
         <div class="arcticle news">
             <img class="smallPic" src="pics/apple.png">
+            <span>
             <h2>
                 Apple sues Israeli spyware firm NSO Group.
             </h2>
@@ -121,6 +128,7 @@
             <p>
                 Business
             </p>
+        </span>
         </div>
     </div>
 
