--- a/01-HTML-CSS/05-grid/BBC-Tamir,Shay,Rasheed/home.html
+++ b/01-HTML-CSS/05-grid/BBC-Tamir,Shay,Rasheed/home.html
@@ -8,7 +8,8 @@
    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Courgette&family=Ubuntu:ital,wght@0,300;0,400;1,300;1,400&display=swap" rel="stylesheet"> <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Courgette&family=Ubuntu:ital,wght@0,300;0,400;1,300;1,400&display=swap" rel="stylesheet">
+     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="bar">
