--- a/01-HTML-CSS/05-grid/Andrew&Ohad&John/news.html
+++ b/01-HTML-CSS/05-grid/Andrew&Ohad&John/news.html
@@ -47,6 +47,7 @@
 
     <div class="topGrid">
         <div class="midArcticle news">
+            <span>
             <h2>
                 Indian government set to ban cryptocurrencies.
             </h2>
@@ -56,6 +57,7 @@
             <p>
                 Tech
             </p>
+        </span>
         </div>
     <div class="bigArcticle news">
     </div>
