--- a/01-HTML-CSS/05-grid/BBC-Tamir,Shay,Rasheed/news.html
+++ b/01-HTML-CSS/05-grid/BBC-Tamir,Shay,Rasheed/news.html
@@ -14,18 +14,22 @@
     
    
    
-<header>
-      <div class="nav-bar">
-           <img class="logo" src="img/BBC-logo.svg" alt="logo">
-         <nav>
-            <ul class="nav_links">
-                <li><a href="#">home</a></li>
-                <li><a href="#">news</a></li>
-                <li><a href="#">sport</a></li>
-            </ul>
-         </nav>
+   <div class="bar">
+      <div class="logo">
+          <a href="home.html">
+              <img src="https://static.bbci.co.uk/frameworks/barlesque/2.83.4/orb/4/img/bbc-blocks-dark.png" alt="BBC">
+            </a>
       </div>
-</header>
+      <div class="nav">
+          <a href="home.html">Home</a>
+      </div>
+      <div class="nav">
+          <a href="news.html">News</a>
+      </div>
+      <div class="nav">
+          <a href="sports.html">Sports</a>
+      </div>
+  </div>
 
 
 
