--- a/01-HTML-CSS/05-grid/BBC-Tamir,Shay,Rasheed/sports.html
+++ b/01-HTML-CSS/05-grid/BBC-Tamir,Shay,Rasheed/sports.html
@@ -10,6 +10,22 @@
 </head>
 
 <body>
+    <div class="bar">
+        <div class="logo">
+            <a href="home.html">
+                <img src="https://static.bbci.co.uk/frameworks/barlesque/2.83.4/orb/4/img/bbc-blocks-dark.png" alt="BBC">
+              </a>
+        </div>
+        <div class="nav">
+            <a href="home.html">Home</a>
+        </div>
+        <div class="nav">
+            <a href="news.html">News</a>
+        </div>
+        <div class="nav">
+            <a href="sports.html">Sports</a>
+        </div>
+    </div>
    
     <div class="wrapper">
         <div class="box">
