--- a/01-HTML-CSS/05-grid/אליה,עדו,ארתור/Task5.html
+++ b/01-HTML-CSS/05-grid/אליה,עדו,ארתור/Task5.html
@@ -22,7 +22,7 @@
         <li><a href="Sign_In.html">Sign In</a></li>
         <li><a href="">Home</a></li>
         <li><a href="">sport</a></li>
-        <li><a href="artur.html">lifeStyle</a></li>
+        <li><a href="artur.html">Worklife</a></li>
       </ul>
         
     </div>
