--- a/01-HTML-CSS/05-grid/אליה,עדו,ארתור/artur.html
+++ b/01-HTML-CSS/05-grid/אליה,עדו,ארתור/artur.html
@@ -4,22 +4,53 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styletask5.css">
     <title>lifeStyle</title>
 </head>
 <body>
-    <div class="wrapper-body">
-        <div class="topnav">
-            <ul>
-              <li><a href=""><i class="fas fa-home" style="padding: 5px;"></i>Home</a></li>
+    <div class="artur-wrapper-body">
+        <div class=" artur-topnav">
+            <ul >
+              <li></li>
+
+              <li class=""><a class="artur-logoa" href="Task5.html"></a></li>
               <li><a href="">news</a></li>
               <li><a href="">sport</a></li>
-              <li><a href="">lifeStyle</a></li>
+              <li><a href="">Worklife</a></li>
             </ul>
               
           </div>
-      <div class="row-container"></div>
-      <div class="row-container"></div>
-      <div class="row-container"></div>
+          <div class="artur-container-parent">
+      <div class="artur-container1">1</div>
+      <div class="artur-container2">2</div>
+      <div class="artur-container3">3</div>
+      <div class="artur-container4">4</div>
+      <div class="artur-container5">5</div>
+      <div class="artur-container6">6</div>
+      <div class="artur-container7">7</div>
+      <div class="artur-container8">8</div>
+      <div class="artur-container9">9</div>
+      <div class="artur-container10">10</div>
+      <div class="artur-container11">11</div>
+      <div class="artur-container12">12</div>
+      <div class="artur-container13">1</div>
+      <div class="artur-container14">2</div>
+      <div class="artur-container15">3</div>
+      <div class="artur-container16">4</div>
+      <div class="artur-container17">5</div>
+      <div class="artur-container18">6</div>
+      <div class="artur-container19">7</div>
+      <div class="artur-container20">8</div>
+      <div class="artur-container21">1</div>
+      <div class="artur-container22">2</div>
+      <div class="artur-container23">3</div>
+      <div class="artur-container24">4</div>
+      <div class="artur-container25">5</div>
+      <div class="artur-container26">6</div>
+      <div class="artur-container27">7</div>
+      <div class="artur-container28">8</div>
+      <div class="artur-container29">9</div>
+      <div class="artur-container30">10</div>
     </div>
 </body>
 </html>
