--- a/01-HTML-CSS/05-grid/classExercise1/chaim/index.html
+++ b/01-HTML-CSS/05-grid/classExercise1/chaim/index.html
@@ -22,7 +22,7 @@
         <div class="box">
             <img src="3.jpg" alt="">
             <h1>Lorem ipsum dolor</h1>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellat reiciendis porro doloremque quae cumque iste minus ex dolore.</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellat reiciendi</p>
         </div>
         <div class="box">
             <img src="4.jpg" alt="">
